[package]
name = "gomoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gomoku_util = { path = "gomoku_util" }
gomoku_term = { path = "gomoku_term" }

[workspace]
members = [ "gomoku_util", "gomoku_term" ]
