[package]
name = "helper"
version = "0.1.0"
edition = "2021"
description = "Helper app for this workspace, offers easier project management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4"
toml_edit = "0.17.1"
