[package]
name = "logger_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
log = { version = "0.4.14", features = ["std"] }
time = { version = "0.3.5", features = ["formatting", "macros", "local-offset"] }
