[package]
name = "guess_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
reqwest = { version = "0.11.9", optional = true }
tokio = { version = "1.15.0", features = ["rt"], default-features = false, optional = true }

[features]
default = []
web = ["reqwest", "tokio/rt"]
